--- a/CommEffPivot/Base.lproj/Main.storyboard
+++ b/CommEffPivot/Base.lproj/Main.storyboard
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ouU-0P-asG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hzJ-lm-tOF">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="5If-y3-0Bf">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="hzJ-lm-tOF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="h45-pm-TSR">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="dX7-xT-0pc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WO8-hb-Wz1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1470" y="-431"/>
+        </scene>
         <!--Loc Col Login View Controller - CommEff Student-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -32,7 +47,7 @@
                                 <rect key="frame" x="51" y="351" width="211" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.1647058874" green="0.5176470876" blue="0.97254908080000002" alpha="1" colorSpace="deviceRGB"/>
-                                <color key="tintColor" patternImage="29D35A64-9792-4BD1-A0F2-CC7E11886C15" colorSpace="pattern"/>
+                                <color key="tintColor" patternImage="63E5840D-73C3-4BD3-9FF4-5C783782A8E7" colorSpace="pattern"/>
                                 <size key="titleShadowOffset" width="7" height="7"/>
                                 <state key="normal" title="Sign In">
                                     <color key="titleColor" red="0.99215692280000001" green="0.99215692280000001" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
@@ -55,41 +70,58 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Kfu-nG-lt2"/>
                     <navigationItem key="navigationItem" title="CommEff Student" id="PQm-oq-P8c"/>
                     <connections>
                         <outlet property="display" destination="CBh-nl-uJe" id="VU8-Ri-rqi"/>
                         <outlet property="notification" destination="Yjd-Xg-BLX" id="oCf-Wo-ZOK"/>
                         <outlet property="password" destination="NPf-UK-xRa" id="CO7-3B-Oxg"/>
-                        <segue destination="ppN-gt-mn1" kind="push" identifier="loginSegue" id="LZG-ni-98a"/>
+                        <segue destination="aKA-MX-9FE" kind="modal" identifier="loginSegue" id="Eh7-Ac-cTE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-157" y="37"/>
+            <point key="canvasLocation" x="-992" y="-437"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="9jL-Gw-wrA">
+        <scene sceneID="8ed-c2-oSi">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nyx-O9-V29" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tabBarController definesPresentationContext="YES" id="Wir-9l-FED" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="8JD-Tq-AmJ"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="uuT-Fx-oED">
+                <tabBarController definesPresentationContext="YES" id="aKA-MX-9FE" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="8dr-bf-DQK"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="GyW-Gv-Ucs">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="u3O-hk-fSZ" kind="relationship" relationship="viewControllers" id="g7h-3h-M1q"/>
+                        <segue destination="zWx-6J-3aB" kind="relationship" relationship="viewControllers" id="R2H-Vo-PYX"/>
+                        <segue destination="u3O-hk-fSZ" kind="relationship" relationship="viewControllers" id="bL1-bd-VoH"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b8F-96-J2q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1550" y="-1612"/>
+            <point key="canvasLocation" x="-545" y="-421"/>
+        </scene>
+        <!--Navigation Controller - Browse-->
+        <scene sceneID="WtT-Fq-2aR">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="zWx-6J-3aB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Browse" image="presentation 2.png" id="9Lr-in-pj7"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GU7-dj-2bG">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ppN-gt-mn1" kind="relationship" relationship="rootViewController" id="N7M-UM-Vjz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YkG-oB-LiR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-49" y="-1075"/>
         </scene>
         <!--Loc Col Table View Controller - Courses-->
         <scene sceneID="t5K-uM-KrN">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cJM-3Y-aN0" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="ppN-gt-mn1" customClass="LocColTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="mIl-17-NwQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -135,8 +167,9 @@
                     <tabBarItem key="tabBarItem" title="Browse" image="presentation 2.png" id="89G-3r-R62"/>
                     <navigationItem key="navigationItem" title="Courses" id="xwU-bZ-08M"/>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cJM-3Y-aN0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="466" y="-19"/>
+            <point key="canvasLocation" x="415" y="-1062"/>
         </scene>
         <!--Table View Controller - Lectures-->
         <scene sceneID="7dC-mY-Lkx">
@@ -216,7 +249,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ozq-qs-9Ev" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="915" y="92"/>
+            <point key="canvasLocation" x="867" y="-1069"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="FY5-op-bK2">
@@ -235,7 +268,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rAj-kg-jwp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1367" y="92"/>
+            <point key="canvasLocation" x="1347" y="-1129"/>
         </scene>
         <!--Table View Controller - Setting-->
         <scene sceneID="WSK-hp-ihc">
@@ -245,7 +278,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <label key="tableHeaderView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2n6-lI-btL">
+                        <label key="tableHeaderView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2n6-lI-btL">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -315,7 +348,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ooV-aW-OEd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2179" y="-1780"/>
+            <point key="canvasLocation" x="21" y="51"/>
         </scene>
         <!--Table View Controller - Title-->
         <scene sceneID="Yhy-ET-5aR">
@@ -336,27 +369,9 @@
             </objects>
             <point key="canvasLocation" x="638" y="-2804"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="l0I-7j-Mvo">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ouU-0P-asG" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="z5k-nU-K87">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="F4V-Ja-zYc"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="e8K-Nv-YU3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-713" y="99"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="29D35A64-9792-4BD1-A0F2-CC7E11886C15" width="256" height="256">
+        <image name="63E5840D-73C3-4BD3-9FF4-5C783782A8E7" width="256" height="256">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -4746,6 +4761,7 @@ BAJoAAQCcAAEAnMABAKFAAQCiAAEAo0AAAAAAAAEAQAAAAAAAABCAAAAAAAAAAAAAAAAAAQCjw
 </mutableData>
         </image>
         <image name="C-Logo.png" width="498" height="402"/>
+        <image name="presentation 2.png" width="30" height="30"/>
         <image name="presentation 2.png" width="30" height="30"/>
         <image name="spanner 2.png" width="30" height="30"/>
     </resources>
